# rubiks-cube

./: .gitignore  CMakeLists.txt  Cube.cpp  Cube.h  DrawPrimitives.h  Makefile  MarkerTracker.cpp  MarkerTracker.h  main.cpp
